# xfce4-time-out-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  xfce-revision.h.in
icons/: Makefile.am  meson.build
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  meson.build  time-out-countdown.c  time-out-countdown.h  time-out-dialogs.c  time-out-dialogs.h  time-out-fadeout.c  time-out-fadeout.h  time-out-lock-screen.c  time-out-lock-screen.h  time-out.c  time-out.h  xfce4-time-out-plugin.desktop.in  xfce4-time-out-plugin.desktop.in.in
panel-plugin/.deps/: xfce4_time_out_plugin-time-out-countdown.Po  xfce4_time_out_plugin-time-out-fadeout.Po  xfce4_time_out_plugin-time-out-lock-screen.Po  xfce4_time_out_plugin-time-out-screen.Po  xfce4_time_out_plugin-time-out.Po
po/: ChangeLog  LINGUAS  Makefile  POTFILES  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  (+25 more)
